<resources>
    <string name="app_name">movietracker_v1</string>

    <string name="app_title">Movie Tracker</string>
    <string name="app_title1">Movie</string>
    <string name="app_title2"> Tracker</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_help">Help</string>
    <string name="menu_options">Options</string>

    <string name="name">ListViewBaseAdapter</string>
    <string name="image">Thumbnail</string>


    <string name="btn_name_cat1"> Movies Watched - outside Home </string>
    <string name="btn_name_cat2"> Movies Watched - at Home </string>
    <string name="btn_name_cat3"> Movies Watched - English Movies </string>
    <string name="btn_name_cat4"> Movies Watched - International Movies </string>
    <string name="btn_name_cat5"> Movies Watched - with Friends </string>

    <string-array name="movieName">
        <item pagename="movie1n"> The Proposal </item>
        <item pagename="movie2n"> Breakfast at Tiffanys </item>
        <item pagename="movie3n"> Alvin and the Chipmunks </item>
        <item pagename="movie4n"> My Big Fat Greek Life </item>
        <item pagename="movie5n"> Kapoor and Sons </item>
    </string-array>


    <string-array name="movieNameHome">
        <item pagename="movie1nh"> Home Alone 2 </item>
        <item pagename="movie2nh"> Danny </item>
        <item pagename="movie3nh"> Rodeo Girl </item>
        <item pagename="movie4nh"> Midnight Stallion </item>
        <item pagename="movie5nh"> War Horse </item>
    </string-array>

    <string-array name="movieNameInter">
        <item pagename="movie1ni"> A Moment To Remember </item>
        <item pagename="movie2ni"> Human Capital </item>
        <item pagename="movie3ni"> Hard to be a God </item>
        <item pagename="movie4ni"> Taxi </item>
        <item pagename="movie5ni"> The Wonders </item>
    </string-array>


    <string-array name="movieNameEng">
        <item pagename="movie1ne"> Avatar </item>
        <item pagename="movie2ne"> Spectre </item>
        <item pagename="movie3ne"> Inside Out </item>
        <item pagename="movie4ne"> Frozen Fever </item>
        <item pagename="movie5ne"> 45 Years </item>
    </string-array>

    <string-array name="movieWhen">
        <item pagename="movie1"> Dec-10-2015 </item>
        <item pagename="movie2"> Jan-7-2016 </item>
        <item pagename="movie3"> Feb-5-2016 </item>
        <item pagename="movie4"> Feb-28-2016 </item>
        <item pagename="movie5"> Mar-25-2016 </item>
    </string-array>

    <string-array name="movieWhere">
        <item pagename="movie1w"> Princeton, NJ </item>
        <item pagename="movie2w"> Edison, NJ </item>
        <item pagename="movie3w"> Edison, NJ </item>
        <item pagename="movie4w"> Princeton, NJ </item>
        <item pagename="movie5w"> Philadelphia, PA </item>
    </string-array>

</resources>

