<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:layout_marginTop="10dp"
    tools:context=".Category">

    <!-- Row#1 -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/ImgView1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/popcorn" />
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text=  "@string/app_title1"
        android:textColor="#0000ff"
        android:textSize="30sp"
        android:typeface="serif" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_title2"
            android:textColor="#0000ff"
            android:textSize="30sp"
            android:typeface="serif" />


        <ImageView
            android:id="@+id/ImgView11"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/pop1" />

    </LinearLayout>

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:drawableLeft="@drawable/od"
        android:drawablePadding="10dp"
        android:text="@string/btn_name_cat1"
        android:theme="@style/CatBtn" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/home5"
        android:text="@string/btn_name_cat2"
        android:theme="@style/CatBtn" />


    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/cinema"
        android:text="@string/btn_name_cat3"
        android:theme="@style/CatBtn" />


    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/inter"
        android:text="@string/btn_name_cat4"
        android:theme="@style/CatBtn" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/friend"
        android:text="@string/btn_name_cat5"
        android:theme="@style/CatBtn" />


</LinearLayout>
</ScrollView>